# Analogy-Task

./: README.md
Complex Analogy Dataset Builder/: relation_aliases.yaml
Complex Analogy Dataset Builder/src/analogy_builder/: config.py  embeddings.py  io_utils.py  models.py  questions.py  relations.py  validate.py
Complex Analogy Dataset Builder/tests/: test_measures.py
analogy dataset builder/: .env.example  config.example.yaml  pyproject.toml
analogy dataset builder/data/input/: concept_pairs.example.csv
analogy dataset builder/src/analogy_builder/: __init__.py  measures.py  openai_service.py  wiki.py
analogy dataset builder/src/analogy_dataset_builder.egg-info/: PKG-INFO  entry_points.txt
analogy dataset builder/tests/: test_maxdiff.py
analogy_dataset_builder/: .gitignore  requirements.txt
analogy_dataset_builder/tests/: test_io.py
first_dataset_published_inlg2025/: capital-location.json  chairperson.json  country_of_citizenship.json  different_from.json  diplomatic_relations.json  filming_location.json  has_contributing_factor.json  movement.json  notable_work.json  operating_system.json  part_of.json  participant.json  place_of_burial.json  place_of_death.json  separated_from.json  shares_border_with.json  twin_administered_body.json  work_location.json  worshipped_by.json
first_dataset_published_inlg2025/.ipynb_checkpoints/: capitalnonproto_capitalproto-checkpoint.json  capitalproto_citynonproto-checkpoint.json  citynonproto_cityproto-checkpoint.json  different_from-checkpoint.json  filming_location-checkpoint.json  notable_work-checkpoint.json
(+6 files in other folders)
